--- a/package.json
+++ b/package.json
@@ -81,6 +81,8 @@
     "react-addons-pure-render-mixin": "^0.14.2",
     "react-addons-transition-group": "^0.14.2",
     "react-addons-update": "^0.14.2",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-document-meta": "^2.0.0",
     "react-dom": "^0.14.1",
     "react-inline-css": "^2.0.0",
