--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "http-proxy": "^1.12.0",
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
+    "lodash": "^4.17.2",
     "lru-memoize": "^1.0.0",
     "map-props": "^1.0.0",
     "multireducer": "^1.0.2",
@@ -128,9 +129,9 @@
     "phantomjs-polyfill": "0.0.1",
     "react-a11y": "^0.2.6",
     "react-addons-test-utils": "^0.14.2",
-    "react-transform-catch-errors": "^1.0.0",
-    "react-transform-hmr": "^1.0.1",
-    "redbox-react": "^1.1.1",
+    "react-transform-catch-errors": "1.0.0",
+    "react-transform-hmr": "1.0.1",
+    "redbox-react": "1.1.1",
     "redux-devtools": "^3.0.0-beta-3",
     "redux-devtools-dock-monitor": "^1.0.0-beta-3",
     "redux-devtools-log-monitor": "^1.0.0-beta-3",
